--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
                 <option value="en">English</option>
                 <option value="hi">हिन्दी</option>
                 <option value="kn">ಕನ್ನಡ</option>
+                <option value="te">తెలుగు</option>
+                <option value="ml">മലയാളം</option>
             </select>
             <div class="user-box">
                 <input id="userNameInput" type="text" placeholder="Your gamer tag" aria-label="Your gamer tag">
@@ -47,11 +49,6 @@
             <div class="hero-actions">
                 <a class="btn btn-accent" href="dashboard.html" data-i18n="home_cta_start">Start Learning</a>
                 <a class="btn btn-secondary" href="quiz.html" data-i18n="home_cta_preview">Preview Quests</a>
-            </div>
-            <div class="ticker">
-                <span class="chip chip-ghost" data-i18n="home_badge_offline">Offline-ready</span>
-                <span class="chip chip-ghost" data-i18n="home_badge_languages">3 Languages</span>
-                <span class="chip chip-ghost" data-i18n="home_badge_social">Social Science Added</span>
             </div>
         </section>
 
@@ -555,16 +552,24 @@
                     <h3>The team</h3>
                     <div class="team">
                         <figure>
-                            <img src="assets/img/team1.png" alt="Portrait of Asha, product lead" onerror="this.style.display='none'">
-                            <figcaption>Asha • Product Lead</figcaption>
+                            <img src="assets/img/team1.png" alt="Portrait of Smriti" onerror="this.style.display='none'">
+                            <figcaption>SMRITI • Product Lead</figcaption>
                         </figure>
                         <figure>
-                            <img src="assets/img/team2.png" alt="Portrait of Ravi, learning designer" onerror="this.style.display='none'">
-                            <figcaption>Ravi • Learning Designer</figcaption>
+                            <img src="assets/img/team2.png" alt="Portrait of Nithya" onerror="this.style.display='none'">
+                            <figcaption>NITHYA • Learning Designer</figcaption>
                         </figure>
                         <figure>
-                            <img src="assets/img/team3.png" alt="Portrait of Zoya, engineering partner" onerror="this.style.display='none'">
-                            <figcaption>Zoya • Engineering Partner</figcaption>
+                            <img src="assets/img/team3.png" alt="Portrait of Naziya" onerror="this.style.display='none'">
+                            <figcaption>NAZIYA • Community Mentor</figcaption>
+                        </figure>
+                        <figure>
+                            <img src="assets/img/team4.png" alt="Portrait of Prabhakar" onerror="this.style.display='none'">
+                            <figcaption>PRABHAKAR • Tech Lead</figcaption>
+                        </figure>
+                        <figure>
+                            <img src="assets/img/team5.png" alt="Portrait of Smruthik" onerror="this.style.display='none'">
+                            <figcaption>SMRUTHIK • Operations Partner</figcaption>
                         </figure>
                     </div>
                 </article>
