--- a/leaderboard.html
+++ b/leaderboard.html
@@ -26,6 +26,8 @@
                 <option value="en">English</option>
                 <option value="hi">हिन्दी</option>
                 <option value="kn">ಕನ್ನಡ</option>
+                <option value="te">తెలుగు</option>
+                <option value="ml">മലയാളം</option>
             </select>
             <div class="user-box">
                 <input id="userNameInput" type="text" placeholder="Your name" aria-label="Your name">
