--- a/login.html
+++ b/login.html
@@ -28,6 +28,8 @@
                 <option value="en">English</option>
                 <option value="hi">हिन्दी</option>
                 <option value="kn">ಕನ್ನಡ</option>
+                <option value="te">తెలుగు</option>
+                <option value="ml">മലയാളം</option>
             </select>
         </div>
     </header>
